Update the structure